--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
@@ -1,18 +1,54 @@
-html {
-  font-size: 14px;
+* {
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    font-family: Helvetica;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+html, body {
+    height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    display: flex;
+}
+
+nav {
+    width: 80px;
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #4C6674;
+}
+
+.icon {
+    width: 60px;
+    aspect-ratio: 1/1;
+    margin-bottom: 10px;
+    display: block;
+    background-color: #637988;
+    border-radius: 50px;
+}
+    .icon:hover {
+        background-color: #29A57B;
+    }
+
+.rightPanel{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 10px auto;
+    grid-template-rows: 40px auto;
+}
+
+.border {
+    background-color: #119B6C;
+}
+
+.tabName{
+    line-height: 40px;
+}
+
+main {
+    background-color: #F0F0F0;
 }
