--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
@@ -8,18 +8,51 @@
 
 <div id="container">
     <div class="navigation">
-        <select>
+        <div>
+        <select class="dropdowns" id="animalEmployeeComboBox">
             <option></option>
             <option></option>
             <option></option>
         </select>
-        <select>
+            <select class="dropdowns" id="entityComboBox">
             <option></option>
             <option></option>
             <option></option>
         </select>
+        </div>
+        <div>
+            <button>&#60;</button>
+            <button>Today</button>
+            <button>></button>
+            <button>New schedule</button>
+        </div>
+
     </div>
-    <div class="week">a</div>
-    <div class="schedule">a</div>
-    <div class="actionPanel">a</div>
+    <div class="week">Week 10</div>
+    <div class="schedule">
+        @{
+            <div>
+            @{
+                for (int i = 0; i < 16; i++)
+                {
+                    <div class="hour">@(i+6):00 </div>
+                }
+            }
+            </div>
+            for (int i = 0; i < 7; i++)
+            {
+                <div class="day">
+                @{
+                for (int j = 0; j < 16; j++)
+                {
+                    <div class="timeBlock"></div>
+                }
+                }
+                </div>
+            }
+        }
+    </div>
+    <div class="actionPanel">
+
+    </div>
 </div>
