--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
@@ -24,11 +24,16 @@ nav {
 
 .icon {
     width: 60px;
+    min-height: 60px;
     aspect-ratio: 1/1;
     margin-bottom: 10px;
     display: block;
     background-color: #637988;
     border-radius: 50px;
+    background-image: url("/Images/ScheduleIcon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
     .icon:hover {
         background-color: #29A57B;
