--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
@@ -5,12 +5,13 @@
     font-family: Helvetica;
 }
 
-html, body {
+html {
     height: 100%;
 }
 
 body {
     display: flex;
+    min-height: 100%;
 }
 
 nav {
