Grzegorz - css update, cookies expire when closing browser, should do more commits

--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
         </a>   
     </nav>
-    <div class="rightPanel">
+    <div class="panel">
         <div class="border"></div>
         <div class="border tabName">@ViewData["TabName"]</div>
         <div class="border"></div>
