--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
@@ -29,6 +29,15 @@
 
     </div>
     <div class="week">Week @Model.weekNumber</div>
+    <div class="weekDays">
+        <div>Mon</div>
+        <div>Tue</div>
+        <div>Wed</div>
+        <div>Thu</div>
+        <div>Fri</div>
+        <div>Sat</div>
+        <div>Sun</div>
+    </div>
     <div class="schedule">
         @{
             <div>
