--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/EmployeeSchedule.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/EmployeeSchedule.css
@@ -1,7 +1,7 @@
 ﻿#container {
     height: 100%;
     display: grid;
-    grid-template-rows: 40px 20px auto auto;
+    grid-template-rows: 40px 20px 20px auto auto;
 }
 
 .navigation {
@@ -31,6 +31,17 @@
 .week{
     text-align: center;
 }
+
+.weekDays{
+    margin: 0 5px 0 107px;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+}
+    .weekDays * {
+        width: 100%;
+        text-align: center;
+    }
 
 .schedule{
     display: grid;
