--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
@@ -15,13 +15,17 @@ body {
 }
 
 nav {
+    position: absolute;
     width: 80px;
-    padding-top: 40px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #4C6674;
 }
+    nav a:first-child {
+        margin-top: 40px;
+    }
 
 .icon {
     width: 60px;
@@ -40,7 +44,8 @@ nav {
         background-color: #29A57B;
     }
 
-.rightPanel{
+.panel{
+    margin-left: 80px;
     width: 100%;
     display: grid;
     grid-template-columns: 10px auto;
