Grzegorz - Authentication and Authorization

--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Welcome.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Welcome.cshtml
@@ -4,6 +4,6 @@
     ViewData["Title"] = "Home page";
 }
 
-<div>
-    <h1>Welcome to ZOO BAZAR</h1>
+<div id="welcome">
+    Welcome to ZOO BAZAR
 </div>
