--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
@@ -63,3 +63,11 @@ nav {
 main {
     background-color: #F0F0F0;
 }
+
+#welcome {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 48px;
+}
