Grzegorz - css and getting first day of week

--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
@@ -28,9 +28,9 @@
         </form>
 
     </div>
-    <div class="week">Week @Model.weekNumber</div>
+    <div class="week">Week @Model.weekNumber </div>
     <div class="weekDays">
-        <div>Mon</div>
+        <div>Mon @Model.firstDayOfWeek.ToString()</div>
         <div>Tue</div>
         <div>Wed</div>
         <div>Thu</div>
