--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
@@ -30,13 +30,13 @@
     </div>
     <div class="week">Week @Model.weekNumber </div>
     <div class="weekDays">
-        <div>Mon @Model.firstDayOfWeek.ToString()</div>
-        <div>Tue</div>
-        <div>Wed</div>
-        <div>Thu</div>
-        <div>Fri</div>
-        <div>Sat</div>
-        <div>Sun</div>
+        <div>Mon <br /> @Model.firstDayOfWeek.ToString()</div>
+        <div>Tue <br /> @Model.firstDayOfWeek.AddDays(1).ToString()</div>
+        <div>Wed <br /> @Model.firstDayOfWeek.AddDays(2).ToString()</div>
+        <div>Thu <br /> @Model.firstDayOfWeek.AddDays(3).ToString()</div>
+        <div>Fri <br /> @Model.firstDayOfWeek.AddDays(4).ToString()</div>
+        <div>Sat <br /> @Model.firstDayOfWeek.AddDays(5).ToString()</div>
+        <div>Sun <br /> @Model.firstDayOfWeek.AddDays(6).ToString()</div>
     </div>
     <div class="schedule">
         @{
@@ -54,9 +54,9 @@
                 @{
                 for (int j = 0; j < 16; j++)
                 {
-                    if(Model.schedule.timeBlockId == j)
+                    if(Model.schedule[i] != null && Model.schedule[i].timeBlockId == j)
                     {
-                        <div class="timeBlock">@Model.schedule.taskName</div>
+                        <div class="timeBlock">@Model.schedule[i].taskName</div>
                     }
                     else
                     {
