Grzegorz - begining of Animal schedule and fixed cookies

--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
@@ -13,12 +13,12 @@
         <a class="icon" asp-page="EmployeeSchedule">
 
         </a>
-        <a class="icon" asp-page="EmployeeSchedule">
+        <a class="icon" asp-page="AnimalSchedule">
 
         </a>
         <a class="icon" asp-page="EmployeeSchedule">
 
-        </a>   
+        </a>
     </nav>
     <div class="panel">
         <div class="border"></div>
