Grzegorz - Animal list wireframe

--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
@@ -20,7 +20,7 @@
             <option></option>
         </select>*@
         </div>
-        <form method="post" autocomplete="on">
+        <form method="post">
             <button asp-page-handler="previous">&#60;</button>
             <button asp-page-handler="today">Today</button>
             <button asp-page-handler="next">></button>
