--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <a class="icon" asp-page="EmployeeSchedule">
 
         </a>
-        <a class="icon" asp-page="AnimalSchedule">
+        <a class="icon" asp-page="AnimalList">
 
         </a>
         <a class="icon" asp-page="EmployeeSchedule">
