--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <a class="icon" asp-page="AnimalList">
 
         </a>
-        <a class="icon" asp-page="EmployeeSchedule">
+        <a class="icon" asp-page="UnavailabilitySchedule">
 
         </a>
     </nav>
