--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/AnimalList.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/AnimalList.css
@@ -2,7 +2,8 @@
     height: 100%;
     padding: 5px;
     display: grid;
-    grid-template-rows: 40px auto auto;
+    grid-template-rows: 40px 40px auto auto;
+    align-items: center;
 }
 
 .navigation form {
@@ -20,20 +21,50 @@
     min-width: 250px;
 }
 
+.sortingMenu {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    color: #d3d3d3;
+    background-color: #4C6674;
+}
+
+    .sortingMenu > div {
+        width: 25%;
+        line-height: 30px;
+        padding-left: 5px;
+        border-right: 2px solid #F0F0F0;
+    }
+
+        .sortingMenu > div:hover {
+            background-color: #637988;
+        }
+
+    .sortingMenu div:last-child {
+        border-right: none;
+    }
+
 .animal {
     width: 100%;
     height: 30px;
     display: flex;
     margin-bottom: 5px;
-    align-items: center;
     justify-content: space-between;
     background-color: #d3d3d3;
+    pointer-events: none;
 }
+    .animal:hover {
+        background-color: #738794;
+        color: #d3d3d3;
+    }
 
     .animal > div {
         width: 25%;
+        line-height: 30px;
         padding-left: 5px;
         border-right: 2px solid #F0F0F0;
+        pointer-events: auto;
     }
     .animal div:last-child {
         border-right: none;
