--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/Index.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/Index.cshtml
@@ -13,7 +13,7 @@
           style="display: flex;
             flex-direction: column;
             width: 400px;">
-        <label asp-for="Name">Name: </label>
+        <label asp-for="Name">Name: ziuuuuu</label>
         <input asp-for="Name" type="text">
         <label asp-for="Password">Password: </label>
         <input asp-for="Password" type="password">
