--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/site.css
@@ -1,5 +1,12 @@
+@font-face {
+    font-family: "OpenSans";
+    src: url('../Fonts/OpenSans.ttf');
+}
+
+
+
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -21,7 +28,7 @@ body {
     padding: 0;
     margin: 0;
     font-size: 20px;
-    font-family: Helvetica;
+    font-family: OpenSans;
 }
 
 html {
