Animal schedule displayed properly, Block of unavailabilitySchedule and start of remaking it in the privacy page to calendar

--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
@@ -19,6 +19,9 @@
         <a class="icon" asp-page="UnavailabilitySchedule">
 
         </a>
+        <a class="icon" asp-page="Privacy">
+
+        </a>
     </nav>
     <div class="panel">
         <div class="border"></div>
