--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Privacy.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Privacy.cshtml
@@ -3,6 +3,73 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<style>
+    #calendar {
+        /*  border: 5px solid yellow;/
+        display: grid;
+        row-gap: 10px;
+        grid-template-rows: 20px 20px 1fr;
+    }
 
-<p>Use this page to detail your site's privacy policy.</p>
+    #Month {
+        font-family: 'Quicksand', sans-serif;
+        color: white;
+        font-size: 30px;
+        text-align:center;
+    }
+
+    .weekdays {
+        justify-items: center;
+    }
+
+        .weekdays abbr {
+            text-decoration: none;
+            font-family: 'Quicksand', sans-serif;
+            color: white;
+            font-size: 20px;
+            text-align: center;
+        }
+
+        .weekdays li {
+            width: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            list-style: none;
+            margin-left: 0;
+            /border: 5px solid lawngreen;*/
+    }
+
+
+    .DaysOfMonth {
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        row-gap: 20px;
+        column-gap: 20px;
+    }
+
+    .DaysOfMonth div {
+        width: 70px;
+        height: 70px;
+        display: flex;
+        font-family: 'Quicksand', sans-serif;
+        color: white;
+        font-size: 20px;
+        list-style: none;
+        margin-left: 0;
+        box-sizing: border-box;
+        border: none;
+        outline: none;
+        box-shadow: 5px 5px 0px rgba(0,0,0,0.1);
+        border-radius: 5px;
+        transition: 0.3s;
+        opacity: 1;
+        padding-left: 5px;
+    }
+</style>
+<div class="DaysOfMonth">
+    @foreach (var x in Model._generator.days)
+    {
+        <button id="@x.MoodValue">@x.Day.ToString()</button>
+    }
+</div>
