--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/AnimalList.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/AnimalList.css
@@ -1,8 +1,9 @@
 ﻿#container {
     height: 100%;
+    box-sizing: border-box;
     padding: 5px;
     display: grid;
-    grid-template-rows: 40px 40px auto auto;
+    grid-template-rows: 40px 40px 75% auto;
     align-items: center;
 }
 
@@ -24,6 +25,8 @@
 .sortingMenu {
     width: 100%;
     height: 30px;
+    box-sizing: border-box;
+    padding: 0 15px 0 0;
     display: flex;
     justify-content: space-between;
     color: #d3d3d3;
@@ -45,11 +48,13 @@
         border-right: none;
     }
 
-.list{
+.list {
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items:flex-start;
+    align-items: flex-start;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .animal {
