--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
@@ -49,7 +49,7 @@ nav {
     width: 100%;
     display: grid;
     grid-template-columns: 10px auto;
-    grid-template-rows: 40px auto;
+    grid-template-rows: 40px calc(100vh - 40px);
 }
 
 .border {
