--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/UnavailabilitySchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/UnavailabilitySchedule.cshtml
@@ -53,9 +53,9 @@
         @{
             <div>
                 @{
-                    for (int i = 0; i < Model.openDuration; i++)
+                    for (int i = Model.startingHour; i <= Model.closingHour; i++)
                     {
-                        <div class="hour">@(i + 6):00 </div>
+                        <div class="hour">@(i):00 </div>
                     }
                 }
             </div>
@@ -63,7 +63,7 @@
             {
                 <form class="day" method="post">
                     @{
-                        for (int j = 0; j < Model.openDuration; j++)
+                        for (int j = Model.startingHour; j <= Model.closingHour; j++)
                         {
                             if (Model.schedule[i][j] != null && Model.schedule[i][j].timeBlockId == j)
                             {
