--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/UnavailabilitySchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/UnavailabilitySchedule.cshtml
@@ -23,62 +23,45 @@
         <form method="post">
             @{
                 //int a = Model.firstDayOfWeek.CompareTo(DateOnly.FromDateTime(DateTime.Now));
-                if (Model.firstDayOfWeek.CompareTo(DateOnly.FromDateTime(DateTime.Now)) <= 0)
+                //if (Model.firstDayOfWeek.CompareTo(DateOnly.FromDateTime(DateTime.Now)) <= 0)
+                if (Model.year <= DateTime.Now.Year)
                 {
                     <button disabled>&#60;</button>
                     
                 }
                 else
                 {
-                    <button asp-page-handler="previous">&#60;</button>
+                    <button asp-page-handler="previous" asp-route-month="@(Model.month-1)" asp-route-year="@Model.year">&#60;</button>
                 }
             }
             <button asp-page-handler="today">Today</button>
-            <button asp-page-handler="next">></button>
-            <button asp-page-handler="new">New schedule</button>
+            <button asp-page-handler="next" asp-route-month="@(Model.month+1)" asp-route-year="@Model.year">></button>
         </form>
 
     </div>
-    <div class="week">Week @Model.weekNumber </div>
-    <div class="weekDays">
-        <div>Mon <br /> @Model.firstDayOfWeek.ToString()</div>
-        <div>Tue <br /> @Model.firstDayOfWeek.AddDays(1).ToString()</div>
-        <div>Wed <br /> @Model.firstDayOfWeek.AddDays(2).ToString()</div>
-        <div>Thu <br /> @Model.firstDayOfWeek.AddDays(3).ToString()</div>
-        <div>Fri <br /> @Model.firstDayOfWeek.AddDays(4).ToString()</div>
-        <div>Sat <br /> @Model.firstDayOfWeek.AddDays(5).ToString()</div>
-        <div>Sun <br /> @Model.firstDayOfWeek.AddDays(6).ToString()</div>
+    <div class="date">
+        @Model.month.@Model.year
     </div>
-    <div class="schedule">
-        @{
-            <div>
-                @{
-                    for (int i = Model.startingHour; i <= Model.closingHour; i++)
-                    {
-                        <div class="hour">@(i):00 </div>
-                    }
-                }
-            </div>
-            for (int i = 0; i < 7; i++)
+    <form method="post" class="month">
+        @foreach (var x in Model._generator.days)
+        {
+            if(x.Month != -1)
             {
-                <form class="day" method="post">
-                    @{
-                        for (int j = Model.startingHour; j <= Model.closingHour; j++)
-                        {
-                            if (Model.schedule[i][j] != null && Model.schedule[i][j].timeBlockId == j)
-                            {
-                                <button asp-page-handler="delete" asp-route-delete="22" class="timeBlock">@Model.schedule[i][j].taskName</button>
-                            }
-                            else
-                            {
-                                <button asp-page-handler="create" asp-route-create="11" class="timeBlock"></button>
-                            }
-                        }
-                    }
-                </form>
+            //if (Model.schedule[i][j] != null && Model.schedule[i][j].timeBlockId == j)
+            //{
+            //    <button asp-page-handler="delete" asp-route-delete="@x.Day.ToString()" class="dayOfMonth">@x.Day.ToString()</button>
+            //}
+            //else
+            //{
+                <button asp-page-handler="create" asp-route-create="@x.Day.ToString()" class="dayOfMonth">@x.Day.ToString()</button>
+                //}
+            }
+            else
+            {
+                <button class="dayOfMonth" disabled>@x.Day.ToString()</button>
             }
         }
-    </div>
+    </form>
     <div class="actionPanel">
     </div>
 </div>
