Grzegorz - employe schedule dash added

--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/EmployeeSchedule.cshtml
@@ -56,7 +56,7 @@
                 {
                     if(Model.schedule[i][j] != null && Model.schedule[i][j].timeBlockId == j)
                     {
-                                <div class="timeBlock">@Model.schedule[i][j].taskName @Model.schedule[i][j].taskHabitat</div>
+                                <div class="timeBlock">@Model.schedule[i][j].taskName - @Model.schedule[i][j].taskHabitat</div>
                     }
                     else
                     {
